kube-system/envoy-gateway/gateways/gateway-internal.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: internal
  namespace: kube-system
spec:
  gatewayClassName: eg-internal
  listeners:
    # - name: http
    #   protocol: HTTP
    #   port: 80
    #   allowedRoutes:
    #     namespaces:
    #       from: All
    - name: https
      protocol: HTTPS
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: acme-crt-secret
            namespace: cert-manager
